// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots atoms Rank Bars 1`] = `
.c1 {
  display: inline-block;
  overflow: hidden;
  line-height: 1;
  vertical-align: middle;
  border-radius: 2px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #3ebdaa;
  border-radius: 0.188rem;
  padding: 0.313rem;
}

.c2 {
  margin-left: 0.5rem;
  padding-top: 0rem;
  color: #fff;
}

<div
  className="c0"
  style={
    Object {
      "width": "70%",
    }
  }
>
  <img
    alt=""
    className="c1"
    height={20}
    size={20}
    width={20}
  >
    <img
      alt="port"
      src="http://lorempixel.com/300/300"
    />
  </img>
  <p
    className="c2"
  >
    eyeballs
  </p>
</div>
`;

exports[`Storyshots molecules Admires 1`] = `
.c3 {
  display: inline-block;
  overflow: hidden;
  line-height: 1;
  vertical-align: middle;
  border-radius: 2px;
}

.c5 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  width: 100%;
}

.c10 {
  position: absolute;
  top: 85%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 3;
  font-size: 0.75rem;
  color: #777;
}

.c8 {
  margin-top: 0.5rem;
  position: relative;
}

.c9 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #eb2e3e;
  height: 0.063rem;
  width: 100%;
  margin: 0;
  padding: 0;
  cursor: pointer;
}

.c9::-webkit-slider-thumb {
  background-color: #fff;
  border: 0.063rem solid #eb2e3e;
  width: 1.563rem;
  height: 1.563rem;
  border-radius: 50%;
  position: relative;
  z-index: 2;
}

.c9::-ms-tooltip {
  display: none;
}

.c9::-ms-tooltip {
  display: none;
}

.c9::-moz-focus-outer {
  border: 0;
}

.c9::-moz-range-track {
  height: 0;
}

.c9::-moz-range-thumb {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #fff;
  width: 1.563rem;
  height: 1.563rem;
  border: 0.063rem solid #eb2e3e;
  border-radius: 50%;
  position: relative;
  z-index: 2;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: 0.75rem;
  color: #555;
}

.c4 {
  margin-left: 0.5rem;
  padding-top: 0rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 1.25rem;
}

.c1 > * {
  width: 50%;
}

.c1 + .c0 {
  border-top: 1px solid #ccc;
}

.c1 img {
  width: 2.5rem;
  height: 2.5rem;
  margin-right: 0.625rem;
}

.c1 p {
  font-size: 0.875rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className=""
>
  <div
    className="c0 c1"
  >
    <div
      className="c2"
    >
      <img
        alt=""
        className="c3"
        height={20}
        size={20}
        width={20}
      >
        <img
          alt="Rufiyaa"
          src="http://lorempixel.com/300/300"
        />
      </img>
      <p
        className="c4"
      >
        monitor
      </p>
    </div>
    <div
      className="c5"
    >
      <div
        className="c6"
      >
        <div
          className="c7"
        >
          <p>
            Berkshire
          </p>
          <p>
            mobile
          </p>
        </div>
        <div
          className="c8"
        >
          <input
            className="c9"
            step="25"
            type="range"
          />
          <span
            className="c10"
            style={
              Object {
                "left": "50%",
              }
            }
          >
            3
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c0 c1"
  >
    <div
      className="c2"
    >
      <img
        alt=""
        className="c3"
        height={20}
        size={20}
        width={20}
      >
        <img
          alt="infomediaries"
          src="http://lorempixel.com/300/300"
        />
      </img>
      <p
        className="c4"
      >
        Missouri
      </p>
    </div>
    <div
      className="c5"
    >
      <div
        className="c6"
      >
        <div
          className="c7"
        >
          <p>
            Cotton
          </p>
          <p>
            harness
          </p>
        </div>
        <div
          className="c8"
        >
          <input
            className="c9"
            step="25"
            type="range"
          />
          <span
            className="c10"
            style={
              Object {
                "left": "50%",
              }
            }
          >
            3
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c0 c1"
  >
    <div
      className="c2"
    >
      <img
        alt=""
        className="c3"
        height={20}
        size={20}
        width={20}
      >
        <img
          alt="Credit Card Account"
          src="http://lorempixel.com/300/300"
        />
      </img>
      <p
        className="c4"
      >
        help-desk
      </p>
    </div>
    <div
      className="c5"
    >
      <div
        className="c6"
      >
        <div
          className="c7"
        >
          <p>
            Balanced
          </p>
          <p>
            Yen
          </p>
        </div>
        <div
          className="c8"
        >
          <input
            className="c9"
            step="25"
            type="range"
          />
          <span
            className="c10"
            style={
              Object {
                "left": "50%",
              }
            }
          >
            3
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c0 c1"
  >
    <div
      className="c2"
    >
      <img
        alt=""
        className="c3"
        height={20}
        size={20}
        width={20}
      >
        <img
          alt="Credit Card Account"
          src="http://lorempixel.com/300/300"
        />
      </img>
      <p
        className="c4"
      >
        deposit
      </p>
    </div>
    <div
      className="c5"
    >
      <div
        className="c6"
      >
        <div
          className="c7"
        >
          <p>
            initiatives
          </p>
          <p>
            Awesome
          </p>
        </div>
        <div
          className="c8"
        >
          <input
            className="c9"
            step="25"
            type="range"
          />
          <span
            className="c10"
            style={
              Object {
                "left": "50%",
              }
            }
          >
            3
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots molecules Heros 1`] = `
.c0 {
  display: inline-block;
  overflow: hidden;
  line-height: 1;
  vertical-align: middle;
  border-radius: 2px;
}

.c1 {
  margin-left: 0.5rem;
  padding-top: 1rem;
  color: #fff;
}

<div
  className=""
>
  <img
    alt=""
    className="c0"
    height={20}
    size={20}
    width={20}
  >
    <img
      alt="firewall"
      src="http://lorempixel.com/300/300"
    />
  </img>
  <p
    className="c1"
  >
    e-commerce
  </p>
</div>
`;

exports[`Storyshots molecules Range Input 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  width: 100%;
}

.c5 {
  position: absolute;
  top: 85%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 3;
  font-size: 0.75rem;
  color: #777;
}

.c3 {
  margin-top: 0.5rem;
  position: relative;
}

.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #eb2e3e;
  height: 0.063rem;
  width: 100%;
  margin: 0;
  padding: 0;
  cursor: pointer;
}

.c4::-webkit-slider-thumb {
  background-color: #fff;
  border: 0.063rem solid #eb2e3e;
  width: 1.563rem;
  height: 1.563rem;
  border-radius: 50%;
  position: relative;
  z-index: 2;
}

.c4::-ms-tooltip {
  display: none;
}

.c4::-ms-tooltip {
  display: none;
}

.c4::-moz-focus-outer {
  border: 0;
}

.c4::-moz-range-track {
  height: 0;
}

.c4::-moz-range-thumb {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #fff;
  width: 1.563rem;
  height: 1.563rem;
  border: 0.063rem solid #eb2e3e;
  border-radius: 50%;
  position: relative;
  z-index: 2;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: 0.75rem;
  color: #555;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <p>
        pixel
      </p>
      <p>
        synergistic
      </p>
    </div>
    <div
      className="c3"
    >
      <input
        className="c4"
        step="25"
        type="range"
      />
      <span
        className="c5"
        style={
          Object {
            "left": "50%",
          }
        }
      >
        3
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots molecules Ranges 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  width: 100%;
}

.c3 {
  position: relative;
  border-bottom: 0.063rem solid #eb2e3e;
  margin-top: 1.25rem;
  width: 100%;
  height: 0.063rem;
  box-sizing: border-box;
}

.c4 {
  position: absolute;
  border: 0.063rem solid #eb2e3e;
  width: 1.563rem;
  height: 1.563rem;
  border-radius: 50%;
  top: 50%;
  background-color: #fff;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 2;
  box-sizing: border-box;
}

.c5 {
  position: absolute;
  top: 85%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 3;
  font-size: 0.75rem;
  color: #777;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: 0.75rem;
  color: #555;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <p>
        solution
      </p>
      <p>
        Buckinghamshire
      </p>
    </div>
    <div
      className="c3"
    >
      <div
        className="c4"
        style={
          Object {
            "left": "50%",
          }
        }
      />
      <span
        className="c5"
        style={
          Object {
            "left": "50%",
          }
        }
      >
        3
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots molecules Ranks 1`] = `
.c5 {
  display: inline-block;
  overflow: hidden;
  line-height: 1;
  vertical-align: middle;
  border-radius: 2px;
}

.c7 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  width: 100%;
}

.c12 {
  position: absolute;
  top: 85%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 3;
  font-size: 0.75rem;
  color: #777;
}

.c10 {
  margin-top: 0.5rem;
  position: relative;
}

.c11 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #eb2e3e;
  height: 0.063rem;
  width: 100%;
  margin: 0;
  padding: 0;
  cursor: pointer;
}

.c11::-webkit-slider-thumb {
  background-color: #fff;
  border: 0.063rem solid #eb2e3e;
  width: 1.563rem;
  height: 1.563rem;
  border-radius: 50%;
  position: relative;
  z-index: 2;
}

.c11::-ms-tooltip {
  display: none;
}

.c11::-ms-tooltip {
  display: none;
}

.c11::-moz-focus-outer {
  border: 0;
}

.c11::-moz-range-track {
  height: 0;
}

.c11::-moz-range-thumb {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #fff;
  width: 1.563rem;
  height: 1.563rem;
  border: 0.063rem solid #eb2e3e;
  border-radius: 50%;
  position: relative;
  z-index: 2;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: 0.75rem;
  color: #555;
}

.c6 {
  margin-left: 0.5rem;
  padding-top: 0rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 1.25rem;
}

.c3 > * {
  width: 50%;
}

.c3 + .c2 {
  border-top: 1px solid #ccc;
}

.c3 img {
  width: 2.5rem;
  height: 2.5rem;
  margin-right: 0.625rem;
}

.c3 p {
  font-size: 0.875rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 span {
  font-weight: bold;
  margin-right: 1.875rem;
}

.c1 + .c0 {
  margin-top: 1rem;
}

<div
  className="c0 c1"
>
  <span>
    41720
  </span>
  <div
    className="c2 c3"
  >
    <div
      className="c4"
    >
      <img
        alt=""
        className="c5"
        height={20}
        size={20}
        width={20}
      >
        <img
          alt="monitoring"
          src="http://lorempixel.com/300/300"
        />
      </img>
      <p
        className="c6"
      >
        dynamic
      </p>
    </div>
    <div
      className="c7"
    >
      <div
        className="c8"
      >
        <div
          className="c9"
        >
          <p>
            Enterprise-wide
          </p>
          <p>
            zero defect
          </p>
        </div>
        <div
          className="c10"
        >
          <input
            className="c11"
            step="25"
            type="range"
          />
          <span
            className="c12"
            style={
              Object {
                "left": "50%",
              }
            }
          >
            3
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots molecules Results 1`] = `
Array [
  .c0 {
  margin: 0 auto;
  color: #3fa2fc;
  font-size: 1.563rem;
  font-weight: bold;
  width: 5rem;
  height: 5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: 0.188rem solid #3fa2fc;
  border-radius: 50%;
}

.c1 {
  text-align: center;
}

.c1 span {
  display: block;
  font-size: 0.625rem;
  font-weight: normal;
  margin-bottom: 0.313rem;
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <span>
        50人中
      </span>
      10位
    </div>
  </div>,
  .c0 {
  margin-top: 0.938rem;
  font-size: 0.875rem;
  line-height: 1.4;
}

<p
    className="c0"
  >
    invoice
  </p>,
]
`;

exports[`Storyshots pages Admire Page 1`] = `
.c6 {
  display: inline-block;
  overflow: hidden;
  line-height: 1;
  vertical-align: middle;
  border-radius: 2px;
}

.c15 {
  position: relative;
  display: inline-block;
  padding: 6px 12px;
  color: #24292e;
  background-color: #f6f8fa;
  background-image: linear-gradient(-180deg,#fafbfc 0%,rgb(239,243,246) 90%);
  font-size: 14px;
  font-weight: 600;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-repeat: repeat-x;
  background-position: -1px -1px;
  background-size: 110% 110%;
  border: 1px solid rgba(27,31,35,0.2);
  border-radius: 0.25em;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
}

.c15:hover {
  background-color: rgb(230,235,241);
  background-image: linear-gradient(-180deg,rgb(239,243,246) 0%,rgb(230,235,241) 90%);
  background-position: -0.5em center;
  border-color: rgba(27,31,35,0.35);
  -webkit-text-decoration: none;
  text-decoration: none;
  background-repeat: repeat-x;
}

.c15:active {
  background-color: rgb(233,236,239);
  background-image: none;
  box-shadow: rgba(27,31,35,0.15) 0px 0.15em 0.3em inset;
  border-color: rgba(27,31,35,0.2);
}

.c15:focus {
  outline: none;
  box-shadow: rgba(3,102,214,0.3) 0px 0px 0px 0.2em;
}

.c15.grouped {
  position: relative;
  border-right-width: 0;
  border-radius: 0;
}

.c15.grouped:first-child {
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
}

.c15.grouped:last-child {
  border-right-width: 1px;
  border-top-right-radius: 3px;
  border-bottom-right-radius: 3px;
}

.c15.grouped:focus,
.c15.grouped:active,
.c15.grouped:hover {
  border-right-width: 1px;
}

.c15.grouped:focus + .grouped,
.c15.grouped:active + .grouped,
.c15.grouped:hover + .grouped {
  border-left-width: 0;
}

.c15:focus,
.c15:active {
  z-index: 1;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  text-align: center;
  background-color: #000;
  width: 40px;
}

.c1 li a {
  color: #fff;
  display: block;
  padding: 0.7rem;
}

.c1 li a:hover,
.c1 li a.active {
  background-color: #3ebdaa;
}

.c8 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  width: 100%;
}

.c13 {
  position: absolute;
  top: 85%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 3;
  font-size: 0.75rem;
  color: #777;
}

.c11 {
  margin-top: 0.5rem;
  position: relative;
}

.c12 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #eb2e3e;
  height: 0.063rem;
  width: 100%;
  margin: 0;
  padding: 0;
  cursor: pointer;
}

.c12::-webkit-slider-thumb {
  background-color: #fff;
  border: 0.063rem solid #eb2e3e;
  width: 1.563rem;
  height: 1.563rem;
  border-radius: 50%;
  position: relative;
  z-index: 2;
}

.c12::-ms-tooltip {
  display: none;
}

.c12::-ms-tooltip {
  display: none;
}

.c12::-moz-focus-outer {
  border: 0;
}

.c12::-moz-range-track {
  height: 0;
}

.c12::-moz-range-thumb {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #fff;
  width: 1.563rem;
  height: 1.563rem;
  border: 0.063rem solid #eb2e3e;
  border-radius: 50%;
  position: relative;
  z-index: 2;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: 0.75rem;
  color: #555;
}

.c7 {
  margin-left: 0.5rem;
  padding-top: 0rem;
}

.c14 {
  margin-left: 0.5rem;
  padding-top: rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f9f9f9;
  min-height: 100%;
  height: 100%;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 1.25rem;
}

.c4 > * {
  width: 50%;
}

.c4 + .c3 {
  border-top: 1px solid #ccc;
}

.c4 img {
  width: 2.5rem;
  height: 2.5rem;
  margin-right: 0.625rem;
}

.c4 p {
  font-size: 0.875rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (max-width:48rem) {
  .c2 {
    display: block;
  }
}

@media (max-width:48rem) {
  .c1 {
    width: 100%;
  }

  .c1 ul {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (max-width:48rem) {
  .c0 {
    display: block;
  }
}

<div
  className="c0"
>
  <nav
    className="c1"
  >
    <ul>
      <li>
        <a
          className="active"
          href="#"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-user fa-w-14 "
            data-icon="user"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </a>
      </li>
      <li>
        <a
          href="#"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-edit fa-w-18 "
            data-icon="edit"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 576 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M402.6 83.2l90.2 90.2c3.8 3.8 3.8 10 0 13.8L274.4 405.6l-92.8 10.3c-12.4 1.4-22.9-9.1-21.5-21.5l10.3-92.8L388.8 83.2c3.8-3.8 10-3.8 13.8 0zm162-22.9l-48.8-48.8c-15.2-15.2-39.9-15.2-55.2 0l-35.4 35.4c-3.8 3.8-3.8 10 0 13.8l90.2 90.2c3.8 3.8 10 3.8 13.8 0l35.4-35.4c15.2-15.3 15.2-40 0-55.2zM384 346.2V448H64V128h229.8c3.2 0 6.2-1.3 8.5-3.5l40-40c7.6-7.6 2.2-20.5-8.5-20.5H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V306.2c0-10.7-12.9-16-20.5-8.5l-40 40c-2.2 2.3-3.5 5.3-3.5 8.5z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </a>
      </li>
    </ul>
  </nav>
  <main
    className="c2"
  >
    <div
      className=""
    >
      <div
        className=""
      >
        <div
          className="c3 c4"
        >
          <div
            className="c5"
          >
            <img
              alt=""
              className="c6"
              height={20}
              size={20}
              width={20}
            >
              <img
                alt="Licensed"
                src="http://lorempixel.com/300/300"
              />
            </img>
            <p
              className="c7"
            >
              web-readiness
            </p>
          </div>
          <div
            className="c8"
          >
            <div
              className="c9"
            >
              <div
                className="c10"
              >
                <p>
                  initiatives
                </p>
                <p>
                  Avon
                </p>
              </div>
              <div
                className="c11"
              >
                <input
                  className="c12"
                  step="25"
                  type="range"
                />
                <span
                  className="c13"
                  style={
                    Object {
                      "left": "50%",
                    }
                  }
                >
                  3
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="c3 c4"
        >
          <div
            className="c5"
          >
            <img
              alt=""
              className="c6"
              height={20}
              size={20}
              width={20}
            >
              <img
                alt="markets"
                src="http://lorempixel.com/300/300"
              />
            </img>
            <p
              className="c14"
            >
              success
            </p>
          </div>
          <div
            className="c8"
          >
            <div
              className="c9"
            >
              <div
                className="c10"
              >
                <p>
                  deliverables
                </p>
                <p>
                  International
                </p>
              </div>
              <div
                className="c11"
              >
                <input
                  className="c12"
                  step="25"
                  type="range"
                />
                <span
                  className="c13"
                  style={
                    Object {
                      "left": "50%",
                    }
                  }
                >
                  3
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="c3 c4"
        >
          <div
            className="c5"
          >
            <img
              alt=""
              className="c6"
              height={20}
              size={20}
              width={20}
            >
              <img
                alt="Optimization"
                src="http://lorempixel.com/300/300"
              />
            </img>
            <p
              className="c14"
            >
              Berkshire
            </p>
          </div>
          <div
            className="c8"
          >
            <div
              className="c9"
            >
              <div
                className="c10"
              >
                <p>
                  Home Loan Account
                </p>
                <p>
                  Plastic
                </p>
              </div>
              <div
                className="c11"
              >
                <input
                  className="c12"
                  step="25"
                  type="range"
                />
                <span
                  className="c13"
                  style={
                    Object {
                      "left": "50%",
                    }
                  }
                >
                  3
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="c3 c4"
        >
          <div
            className="c5"
          >
            <img
              alt=""
              className="c6"
              height={20}
              size={20}
              width={20}
            >
              <img
                alt="initiative"
                src="http://lorempixel.com/300/300"
              />
            </img>
            <p
              className="c14"
            >
              infomediaries
            </p>
          </div>
          <div
            className="c8"
          >
            <div
              className="c9"
            >
              <div
                className="c10"
              >
                <p>
                  JSON
                </p>
                <p>
                  Configurable
                </p>
              </div>
              <div
                className="c11"
              >
                <input
                  className="c12"
                  step="25"
                  type="range"
                />
                <span
                  className="c13"
                  style={
                    Object {
                      "left": "50%",
                    }
                  }
                >
                  3
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="c3 c4"
        >
          <div
            className="c5"
          >
            <img
              alt=""
              className="c6"
              height={20}
              size={20}
              width={20}
            >
              <img
                alt="Berkshire"
                src="http://lorempixel.com/300/300"
              />
            </img>
            <p
              className="c14"
            >
              Manager
            </p>
          </div>
          <div
            className="c8"
          >
            <div
              className="c9"
            >
              <div
                className="c10"
              >
                <p>
                  Jamaica
                </p>
                <p>
                  Auto Loan Account
                </p>
              </div>
              <div
                className="c11"
              >
                <input
                  className="c12"
                  step="25"
                  type="range"
                />
                <span
                  className="c13"
                  style={
                    Object {
                      "left": "50%",
                    }
                  }
                >
                  3
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="c3 c4"
        >
          <div
            className="c5"
          >
            <img
              alt=""
              className="c6"
              height={20}
              size={20}
              width={20}
            >
              <img
                alt="Granite"
                src="http://lorempixel.com/300/300"
              />
            </img>
            <p
              className="c14"
            >
              synthesizing
            </p>
          </div>
          <div
            className="c8"
          >
            <div
              className="c9"
            >
              <div
                className="c10"
              >
                <p>
                  Money Market Account
                </p>
                <p>
                  Italy
                </p>
              </div>
              <div
                className="c11"
              >
                <input
                  className="c12"
                  step="25"
                  type="range"
                />
                <span
                  className="c13"
                  style={
                    Object {
                      "left": "50%",
                    }
                  }
                >
                  3
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        className="c15"
      >
        clicks-and-mortar
      </button>
    </div>
  </main>
</div>
`;

exports[`Storyshots pages Mypage 1`] = `
.c3 {
  padding: 24px;
  margin-top: 8px;
}

.c4 {
  display: inline-block;
  overflow: hidden;
  line-height: 1;
  vertical-align: middle;
  border-radius: 2px;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  text-align: center;
  background-color: #000;
  width: 40px;
}

.c1 li a {
  color: #fff;
  display: block;
  padding: 0.7rem;
}

.c1 li a:hover,
.c1 li a.active {
  background-color: #3ebdaa;
}

.c6 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  width: 100%;
}

.c9 {
  position: relative;
  border-bottom: 0.063rem solid #eb2e3e;
  margin-top: 1.25rem;
  width: 100%;
  height: 0.063rem;
  box-sizing: border-box;
}

.c10 {
  position: absolute;
  border: 0.063rem solid #eb2e3e;
  width: 1.563rem;
  height: 1.563rem;
  border-radius: 50%;
  top: 50%;
  background-color: #fff;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 2;
  box-sizing: border-box;
}

.c11 {
  position: absolute;
  top: 85%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 3;
  font-size: 0.75rem;
  color: #777;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: 0.75rem;
  color: #555;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #3ebdaa;
  border-radius: 0.188rem;
  padding: 0.313rem;
}

.c14 {
  margin-top: 0.938rem;
  font-size: 0.875rem;
  line-height: 1.4;
}

.c12 {
  margin: 0 auto;
  color: #3fa2fc;
  font-size: 1.563rem;
  font-weight: bold;
  width: 5rem;
  height: 5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: 0.188rem solid #3fa2fc;
  border-radius: 50%;
}

.c13 {
  text-align: center;
}

.c13 span {
  display: block;
  font-size: 0.625rem;
  font-weight: normal;
  margin-bottom: 0.313rem;
}

.c5 {
  margin-left: 0.5rem;
  padding-top: 1rem;
  color: #fff;
}

.c16 {
  margin-left: 0.5rem;
  padding-top: 0rem;
  color: #fff;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f9f9f9;
  min-height: 100%;
  height: 100%;
}

@media (max-width:48rem) {
  .c2 {
    display: block;
  }
}

@media (max-width:48rem) {
  .c1 {
    width: 100%;
  }

  .c1 ul {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (max-width:48rem) {
  .c0 {
    display: block;
  }
}

<div
  className="c0"
>
  <nav
    className="c1"
  >
    <ul>
      <li>
        <a
          className="active"
          href="#"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-user fa-w-14 "
            data-icon="user"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </a>
      </li>
      <li>
        <a
          href="#"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-edit fa-w-18 "
            data-icon="edit"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 576 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M402.6 83.2l90.2 90.2c3.8 3.8 3.8 10 0 13.8L274.4 405.6l-92.8 10.3c-12.4 1.4-22.9-9.1-21.5-21.5l10.3-92.8L388.8 83.2c3.8-3.8 10-3.8 13.8 0zm162-22.9l-48.8-48.8c-15.2-15.2-39.9-15.2-55.2 0l-35.4 35.4c-3.8 3.8-3.8 10 0 13.8l90.2 90.2c3.8 3.8 10 3.8 13.8 0l35.4-35.4c15.2-15.3 15.2-40 0-55.2zM384 346.2V448H64V128h229.8c3.2 0 6.2-1.3 8.5-3.5l40-40c7.6-7.6 2.2-20.5-8.5-20.5H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V306.2c0-10.7-12.9-16-20.5-8.5l-40 40c-2.2 2.3-3.5 5.3-3.5 8.5z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </a>
      </li>
    </ul>
  </nav>
  <main
    className="c2"
  >
    <div
      className="c3"
    >
      <img
        alt=""
        className="c4"
        height={20}
        size={20}
        width={20}
      >
        <img
          alt="focus group"
          src="http://lorempixel.com/300/300"
        />
      </img>
      <p
        className="c5"
      >
        infomediaries
      </p>
    </div>
    <div
      className=""
    >
      <div
        className=""
      >
        <div
          className="c6"
        >
          <div
            className="c7"
          >
            <div
              className="c8"
            >
              <p>
                とても悪い
              </p>
              <p>
                とても良い
              </p>
            </div>
            <div
              className="c9"
            >
              <div
                className="c10"
                style={
                  Object {
                    "left": "50%",
                  }
                }
              />
              <span
                className="c11"
                style={
                  Object {
                    "left": "50%",
                  }
                }
              >
                3
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        className=""
      >
        <div
          className="c12"
        >
          <div
            className="c13"
          >
            <span>
              50人中
            </span>
            10位
          </div>
        </div>
        <p
          className="c14"
        >
          Vatu
        </p>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className=""
      >
        <div
          className="c15"
          style={
            Object {
              "width": "88%",
            }
          }
        >
          <img
            alt=""
            className="c4"
            height={20}
            size={20}
            width={20}
          >
            <img
              alt="impactful"
              src="http://lorempixel.com/300/300"
            />
          </img>
          <p
            className="c16"
          >
            Radial
          </p>
        </div>
        <div
          className="c15"
          style={
            Object {
              "width": "27%",
            }
          }
        >
          <img
            alt=""
            className="c4"
            height={20}
            size={20}
            width={20}
          >
            <img
              alt="Tennessee"
              src="http://lorempixel.com/300/300"
            />
          </img>
          <p
            className="c16"
          >
            Money Market Account
          </p>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`Storyshots templates Sign In 1`] = `
.c0 {
  background: #3ebdaa;
  background: linear-gradient( 90deg, rgba(62,189,170,0.6), rgba(63,162,252,0.6) );
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  background-color: #fff;
  padding: 3rem;
  width: 24rem;
  box-sizing: border-box;
  box-shadow: 0 0.125rem 0.125rem 0 rgba(0,0,0,0.1);
}

.c1 button {
  margin-top: 3.75rem;
  width: 100%;
}

<div
  className="c0"
>
  <main
    className="c1"
  />
</div>
`;

exports[`Storyshots templates Sign In Default 1`] = `
.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  text-align: center;
  background-color: #000;
  width: 40px;
}

.c1 li a {
  color: #fff;
  display: block;
  padding: 0.7rem;
}

.c1 li a:hover,
.c1 li a.active {
  background-color: #3ebdaa;
}

.c0 {
  background: #3ebdaa;
  background: linear-gradient( 90deg, rgba(62,189,170,0.6), rgba(63,162,252,0.6) );
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (max-width:48rem) {
  .c2 {
    display: block;
  }
}

@media (max-width:48rem) {
  .c1 {
    width: 100%;
  }

  .c1 ul {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

<div
  className="c0"
>
  <nav
    className="c1"
  >
    <ul>
      <li>
        <a
          className="active"
          href="#"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-user fa-w-14 "
            data-icon="user"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </a>
      </li>
      <li>
        <a
          href="#"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-edit fa-w-18 "
            data-icon="edit"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 576 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M402.6 83.2l90.2 90.2c3.8 3.8 3.8 10 0 13.8L274.4 405.6l-92.8 10.3c-12.4 1.4-22.9-9.1-21.5-21.5l10.3-92.8L388.8 83.2c3.8-3.8 10-3.8 13.8 0zm162-22.9l-48.8-48.8c-15.2-15.2-39.9-15.2-55.2 0l-35.4 35.4c-3.8 3.8-3.8 10 0 13.8l90.2 90.2c3.8 3.8 10 3.8 13.8 0l35.4-35.4c15.2-15.3 15.2-40 0-55.2zM384 346.2V448H64V128h229.8c3.2 0 6.2-1.3 8.5-3.5l40-40c7.6-7.6 2.2-20.5-8.5-20.5H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V306.2c0-10.7-12.9-16-20.5-8.5l-40 40c-2.2 2.3-3.5 5.3-3.5 8.5z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </a>
      </li>
    </ul>
  </nav>
  <main
    className="c2"
  />
</div>
`;
